--- a/frontend/groupomania/src/scss/style.scss
+++ b/frontend/groupomania/src/scss/style.scss
@@ -14,9 +14,8 @@ button, input{
     // background-color: rgb(0,190,142);
     background-color: $lightGreen;
     justify-content: space-between;
-    box-shadow: $naturalShadow2;
     position: fixed;
-    z-index: 1;
+    z-index: 2;
 
     .header_container_login{
         width: 12rem;
@@ -59,10 +58,12 @@ button, input{
 .container_footer {
     background-color: $darkGreen;
     display: flex;
-    justify-content: space-around;s
+    justify-content: space-around;
+    z-index: 1;
+    position: fixed;
 
     :nth-child(1), :nth-child(2){
-        margin-top: 2.5rem;
+        margin-top: 1rem;
     }
 
     p{
@@ -136,7 +137,7 @@ button, input{
             margin-right: 3rem;
             display: flex;
             flex-direction: column;
-            @include neumorphismeContainerLogin;
+            @include neumorphismeContainer;
 
             label{
                 color: white;
@@ -214,15 +215,13 @@ button, input{
     .container_form{
         display: flex;
         flex-direction: column;
-        // width: auto;
         border-radius: 15px;
         background: $lightMediumGreen;
         box-shadow: $naturalHightShadow;
         padding: 1rem;
 
         .container_form_style{
-            // padding: 0.5rem;
-            @include neumorphismeContainerLogin;
+            @include neumorphismeContainer;
 
             .container_label{
                 display: flex;
@@ -232,7 +231,6 @@ button, input{
                     height: 2rem;
                     font-size: 1.4rem;
                     padding: 1.5rem;
-                    // flex-grow: 1;
                     text-align: left;       
                     width: 20rem;         
                 }
@@ -242,8 +240,7 @@ button, input{
                     width: 15rem;
                     border-radius: 15px;
                     background: white;
-                    box-shadow:  4px 4px 9px #006f53, 
-                    -4px -4px 9px #009771;
+                    box-shadow: $shadowgreenMediumOutside;
                     border: none;
                 }
     
@@ -253,8 +250,7 @@ button, input{
                     width: 15rem;
                     border-radius: 15px;
                     background: white;
-                    box-shadow:  4px 4px 9px #006f53, 
-                    -4px -4px 9px #009771;
+                    box-shadow: $shadowgreenMediumOutside;
                     border: none;
                     justify-content: right;
                     align-items: right;
@@ -296,17 +292,10 @@ button, input{
                     color: white;
                     margin: 0.5rem;
                     font-size: 19px;
-                    border-radius: 15px;
-                    background: linear-gradient(145deg, #008c69, #007658);
-                    box-shadow:  2px 2px 4px #006f53, 
-                    -2px -2px 4px #009771;
-                    border: none;
+                    @include neumorphismeButtonMedium;
         
                     &:hover{
-                        border-radius: 15px;
-                        background: linear-gradient(145deg, #007658, #008c69);
-                        box-shadow:  2px 2px 4px #006f53, 
-                        -2px -2px 4px #009771;
+                        @include neumorphismeHoverButtonMedium;
                     }
                 }
             }
@@ -319,17 +308,10 @@ button, input{
                 height: 4rem;
                 font-size: 24px;
                 padding: 1rem;
-                border-radius: 15px;
-                background: linear-gradient(145deg, #008c69, #007658);
-                box-shadow:  2px 2px 4px #006f53, 
-                -2px -2px 4px #009771;
-                border: none;
+                @include neumorphismeButtonMedium;
                 
                 &:hover{
-                    border-radius: 15px;
-                    background: linear-gradient(145deg, #007658, #008c69);
-                    box-shadow:  2px 2px 4px #006f53, 
-                    -2px -2px 4px #009771;
+                    @include neumorphismeHoverButtonMedium;
                 }
             }
         }
@@ -350,13 +332,18 @@ button, input{
     justify-content: center;
     flex-direction: column;
     scroll-behavior: smooth;
+    // height: 60rem;
 
+
+    //PARTIE BANNIERE DE RECHERCHE
     .banner_chat{
+        box-shadow: $naturalShadow2;
         width: auto;
         display: flex;
-        background-color: #008362;
+        background-color: $lightMediumGreen;
         height: 5rem;
         justify-content: space-around;
+        z-index: 1;
 
         .banner_btn_post{
             margin: auto;
@@ -364,10 +351,7 @@ button, input{
             .button_chat{
                 height: 3rem;
                 border: none;
-                border-radius: 15px;
-                background: linear-gradient(145deg, #008c69, #007658);
-                box-shadow:  4px 4px 7px#006a4f, 
-                -4px -4px 7px#009c75;
+                @include neumorphismeButtonMedium;
                 font-size: 1.3rem;
                 font-weight: bold;
                 color: white;
@@ -375,10 +359,7 @@ button, input{
             }
         
             .button_chat:hover{
-                border-radius: 15px;
-                background: linear-gradient(145deg, #007658, #008c69);
-                box-shadow:  4px 4px 7px #006a4f, 
-                -4px -4px 7px#009c75;
+                @include neumorphismeHoverButtonMedium;
             }
         }
 
@@ -388,10 +369,7 @@ button, input{
             button{
                 height: 3rem;
                 border: none;
-                border-radius: 15px;
-                background: linear-gradient(145deg, #008c69, #007658);
-                box-shadow:  4px 4px 7px#006a4f, 
-                -4px -4px 7px#009c75;
+                @include neumorphismeButtonMedium;
                 font-size: 1.3rem;
                 font-weight: bold;
                 color: white;
@@ -399,16 +377,14 @@ button, input{
 
             }
             button:hover{
-                border-radius: 15px;
-                background: linear-gradient(145deg, #007658, #008c69);
-                box-shadow:  4px 4px 7px #006a4f, 
-                -4px -4px 7px#009c75;
+                @include neumorphismeHoverButtonMedium;
             }
 
             input{
-                height: 1.5rem;
+                height: 2.5rem;
                 border-radius: 15px;
                 border: none;
+                font-size: 16px;
             }
         }
     }
@@ -417,22 +393,18 @@ button, input{
         background-color: white;
     }
 
-    .container_message{
-        margin-top: 2rem;
-        height: 45rem;
-        overflow-y: scroll;
-        margin-left: 10rem;
-        margin-right: 10rem;
-        box-shadow: 0 1px 10px rgba(0,0,0,0.12), 0 1px 20px rgba(0,0,0,0.24);
-        
+    //PARTIE CREATION DU MESSAGE
+    .container_post_message{
+        margin-top: 2.5rem;
+
         .container_form_chat {
-        background-color: rgba(0,84,63, 0.7);
-        box-shadow: inset 1px 1px 20px 0px #00543f;
-        margin-left: 20%;
-        margin-right: 20%;
-        height: 20rem;
-        border-radius: 30px;
-        
+            color: white;
+            background-color:$lightMediumGreen;
+            box-shadow: $shadowgreenMediumInset;
+            border-radius: 30px;
+            width: 40rem;
+            margin: auto;
+
             :nth-child(1){
                 font-size: 1.4rem;
                 
@@ -440,9 +412,17 @@ button, input{
 
             .title_message{
                 margin-bottom: 1rem;
+                padding-top: 1rem;
 
                 label{
                     margin-right: 1rem;
+                }
+
+                input{
+                    height: 2rem;
+                    border-radius: 15px;
+                    border: none;
+                    box-shadow: $shadowgreenMediumOutside;
                 }
             }
 
@@ -452,40 +432,89 @@ button, input{
                 
                 textarea{
                     margin: 1rem;
-                    height: 13rem;
+                    min-height: 10rem;
+                    border-radius: 15px;
+                    border: none;
+                    outline: none;
+                    left: 5rem;
+                    box-shadow: $shadowgreenMediumOutside;
                 }
             }
 
+            .message_style{
+                display: flex;
+
+                .label-file {
+                    font-size: 20px;
+                    border-radius: 15px;
+                    @include neumorphismeButtonMedium;
+                    cursor: pointer;
+                    color: white;
+                    font-weight: bold;
+                    width: 15rem;
+                    margin-top: 1rem;
+                    padding: 1rem;
+                    max-height: 2rem;
+                    margin-left: 3rem;
+                }
+                .label-file:hover {
+                    @include neumorphismeHoverButtonMedium;
+                    color: white;
+                }
+                
+                .input-file {
+                    display: none;
+                }
+        
+                .img_file{
+                    max-width: 15rem;
+                    max-height: 10rem;
+                    border-radius: 15px;
+                    margin-top: 1rem;
+                    display: flex;
+                    margin-left: 4rem;
+                }
+            }
+
+
             button{
                 margin-top: 3rem;
+                margin-bottom: 2rem;
                 width: 10rem;
                 height: 4rem;
                 border-radius: 30px;
                 font-size: 1.5rem;
-                background-color: #00543f;
                 border: none;
                 color: white;
-                transition: all 200ms ease-in;
+                @include neumorphismeButtonMedium;
             }
     
             button:hover{
                 background-color: #00febe;
-                color: black;
+                @include neumorphismeHoverButtonMedium;
             }
 
         }
+    }
+
+    //PARTIE LISTE DES MESSAGES
+
+    .container_message{
+        box-shadow: none;
+        overflow-y: scroll;
+        height: 60rem;
+
         .message_post{
             background-color: white;
             display: flex;
             flex-direction: column;
             margin-top: 2rem;
             margin-bottom: 2rem;
-            margin-left: 10%;
-            margin-right: 10%; 
+            margin-left: 20%;
+            margin-right: 20%; 
             border-radius: 15px;
             height: auto;
             box-shadow: 0 0 5px 5px rgba(0,0,0,0.25);
-            ;
 
             .message_post_user{
                 border-top-left-radius: 15px;
@@ -500,11 +529,13 @@ button, input{
                     max-height: 3rem;
                     border-radius: 50%; ;
                 }
-                p{
-                    margin-left: 1rem;
-                    // text-align: right;
+                .message_post_name{
+                    margin-top: 1.2rem;
+                    margin-left: 0.5rem;
+                    font-weight: 700;
                 }
                 .message_post_date{
+                    margin-top: 1.2rem;
                     margin-left: auto;
                     margin-right: 1rem;
                 }
@@ -525,20 +556,36 @@ button, input{
                     }
 
                     button{
+                        font-size: 16px;
+                        border-radius: 15px;
                         margin-top: 1rem;
                         margin-right: 1rem;
                         height: 2rem;
+                        background-color:$mediumGreenShadowLowIntensity;
+                        border: none;
+                        transition: 0.3s;
+                        color: white;
+                        padding-left: 1rem;
+                        padding-right: 1rem;
+
+                        &:hover{
+                            background-color:#00febe;
+                            color: black;
+                        }
                     }
                 }
                 .element_post_content{
 
                     p{
-                        margin: 1rem;
+                        margin-bottom: 1rem;
+                        margin-left: 1.5rem;
+                        // margin: 1rem;
                         text-align: left;
                     }
 
                     img{
                         max-width: 13rem;
+                        margin: 1rem;
                     }
                 }
             }
@@ -547,13 +594,18 @@ button, input{
                 text-align: right;
 
                 button{
+                    font-size: 14px;
                     margin-right: 2rem;
                     margin-bottom: 1rem;
-                    background-color: rgba(0,84,63, 0.7);
+                    margin-top: 1rem;
+                    background-color:$mediumGreenShadowLowIntensity;
                     color: white;
                     border-radius: 15px;
                     height: 2rem;
                     border: none;
+                    padding-left: 1rem;
+                    padding-right: 1rem;
+                    transition: 0.3s;
                 }
                 
                 button:hover{
@@ -566,39 +618,101 @@ button, input{
                     
 
                     .container_user_comment{
+                        display: flex;
+                        flex-direction: column;
                         margin: 1rem;
                         border-radius: 5px;
                         background: linear-gradient(145deg, #e6e6e6, #ffffff);
-                        box-shadow:  7px 7px 0px #cccccc, 
-                        -7px -7px 0px #ffffff;
+                        box-shadow:  4px 4px 0px #cccccc, 
+                        -3px -3px 0px #ffffff;
 
                         .user_comment{
                             padding: 0.5rem;
-                            font-size: 19px;
+                            font-size: 16px;
+                            font-weight: 700;
                             border-top-left-radius: 5px;
                             border-top-right-radius: 5px;
+                            margin-left: 0.5rem;
                         }
 
                         img{
                             max-width: 13rem;
+                            margin-left: 1rem;
 
                         }
 
                         .comment{
                             padding: 0.5rem;
+                            margin-left: 0.5rem;
+
                         }
+
+                        .container_btn_style{
+                            display: flex;
+                            justify-content: right;
+
+                            button{
+                                margin-left: 1rem;
+                            }
+                        }
+
+                        
                     }
                 }
 
                 .container_txt_area_comment{
+                    display: flex;
+                    flex-direction: column;
                     
                     textarea{
                         width: 80%;
-                        margin-right: 10%;
+                        margin: auto;
                         height: 6rem;
                         margin-bottom: 1rem;
 
                     }
+
+                    .container_flex_comment_img{
+                        display: flex;
+
+                        .label-file {
+                        width: 10rem;
+                        text-align: center;
+                        margin-left: 2rem;
+                        margin-bottom: 1rem;
+                        margin-top: 1rem;
+                        background-color:$mediumGreenShadowLowIntensity;
+                        color: white;
+                        border-radius: 15px;
+                        border: none;
+                        padding-top: 0.5rem;
+                        padding-bottom: 0.5rem;
+                        padding-left: 1rem;
+                        padding-right: 1rem;
+                        transition: 0.3s;
+                        max-height: 1.5rem;
+                            
+                        }
+                        .label-file:hover {
+                            background-color:#00febe;
+                            color: black;
+                        }
+                        
+                        .input-file {
+                            display: none;
+                        }
+                
+                        .img_file{
+                            max-width: 15rem;
+                            max-height: 10rem;
+                            border-radius: 15px;
+                            margin-top: 1rem;
+                            display: flex;
+                            margin-left: 4rem;
+                            margin-bottom: 1rem;
+                        }
+                    }
+
                 }
             }
 
@@ -620,7 +734,7 @@ button, input{
 //DEBUT PROFIL
 
 .container_profil{
-    top: 20%;
+    top: 10%;
     left: 0;
     right: 0;
     margin: 0 auto;
@@ -684,7 +798,7 @@ button, input{
 .container_profil_button{
     left: 0;
     right: 0;
-    bottom: 0%;
+    bottom: 10%;
     position: absolute;
     display: flex;
     justify-content: center;
