Mise en place de la barre de scroll sur la page chat

--- a/frontend/groupomania/src/scss/style.scss
+++ b/frontend/groupomania/src/scss/style.scss
@@ -61,15 +61,22 @@ button, input{
     justify-content: space-around;
     z-index: 1;
     position: fixed;
+    height: 5rem;
 
     :nth-child(1), :nth-child(2){
-        margin-top: 1rem;
+        margin-top: 1.5rem;
     }
 
     p{
         font-size: 1.5rem;
         color: white;
         font-family: 'Playfair Display SC', serif;
+    }
+    a{
+        font-size: 1.5rem;
+        color: white;
+        font-family: 'Playfair Display SC', serif;
+        text-decoration: none;
     }
 
 }
@@ -337,13 +344,15 @@ button, input{
 
     //PARTIE BANNIERE DE RECHERCHE
     .banner_chat{
+        top: 4rem;
         box-shadow: $naturalShadow2;
-        width: auto;
+        width: 100%;
         display: flex;
         background-color: $lightMediumGreen;
         height: 5rem;
         justify-content: space-around;
         z-index: 1;
+        position: fixed;
 
         .banner_btn_post{
             margin: auto;
@@ -500,9 +509,12 @@ button, input{
     //PARTIE LISTE DES MESSAGES
 
     .container_message{
+        margin-top: 5rem;
+        margin-bottom: 5rem;
         box-shadow: none;
         overflow-y: scroll;
-        height: 60rem;
+        height: calc(100vh - 4rem - 5rem - 5rem);
+        // height: 100%;
 
         .message_post{
             background-color: white;
@@ -853,9 +865,9 @@ button, input{
             font-weight: 700;
 
         }
-                a:hover{
-                    color: $lightGreen;
-                }
+        a:hover{
+            color: $lightGreen;
+        }
 
     }
 }
