--- a/frontend/groupomania/src/scss/style.scss
+++ b/frontend/groupomania/src/scss/style.scss
@@ -68,15 +68,23 @@ button, input{
     }
 
     p{
-        font-size: 1.5rem;
+        font-size: 24px;
         color: white;
         font-family: 'Playfair Display SC', serif;
+
+        @media screen and (max-width: 542px){
+            font-size: 16px;
+        }
     }
     a{
-        font-size: 1.5rem;
+        font-size: 24px;
         color: white;
         font-family: 'Playfair Display SC', serif;
         text-decoration: none;
+
+        @media screen and (max-width: 542px){
+            font-size: 16px;
+        }
     }
 
 }
@@ -93,8 +101,6 @@ button, input{
         left: 0;
         right: 0;
         margin: 0 auto;
-        // width: 40rem;
-        // height: 11rem;
         position: absolute;
         display: flex;
         justify-content: center;
@@ -102,13 +108,18 @@ button, input{
         background-color: $mediumGreenShadowLowIntensity;
         box-shadow: $shadowgreenMediumInset;
 
+
         p{
+            padding: 1rem;
             color: white;
             font-weight: 700;
             font-size: 4rem;
             font-family: 'Playfair Display SC', serif;
             text-shadow: #00543f 5px 0 5px;
             
+            @media screen and (max-width: 800px) {
+                font-size: 2rem;
+            }
         }
     }
 }
@@ -126,6 +137,10 @@ button, input{
     display: flex;
     justify-content: center;
 
+    @media screen and (max-width: 560px) {
+        top: 15%;
+    }
+
     .container_form{
         border-radius: 5%;
         width: 33rem;
@@ -135,6 +150,12 @@ button, input{
         border-radius: 15px;
         background: $lightMediumGreen;
         box-shadow: $naturalHightShadow;
+
+        @media screen and (max-width: 560px) {
+            width: 100%;
+            border-radius: 0;
+            height: 35rem;
+        }
 
         .container_form_style{
 
@@ -146,6 +167,13 @@ button, input{
             flex-direction: column;
             @include neumorphismeContainer;
 
+            @media screen and (max-width: 540px){
+                text-align: center;
+                align-items: center;
+                margin-left: 0.8rem;
+                margin-right: 0.8rem;
+            }
+
             label{
                 color: white;
                 font-size: 2rem;
@@ -154,17 +182,6 @@ button, input{
                 width: auto;
                 padding-left: 0rem;
             }
-    
-            input{
-                margin-top: 1rem;
-                width: 15rem;
-                height: 2rem;
-                border: none;
-                border-radius: 15px;
-                background: white;
-                box-shadow: $shadowgreenMediumOutside;
-
-            }
 
             .email_label_form{
                 margin-top: 2rem;
@@ -172,20 +189,53 @@ button, input{
     
             .email_input_form{
                 margin-bottom: 3rem;
-            }
-    
-            .password_button_form{
-                padding: 1rem;
-                font-size: 19px;
-                margin-left: 3rem;
+                margin-top: 1rem;
+                width: 15rem;
+                height: 2rem;
+                border: none;
                 border-radius: 15px;
-                @include neumorphismeButtonMedium;
+                background: white;
+                box-shadow: $shadowgreenMediumOutside;
+            }
 
-                &:hover{
+            .container_style_input_form_login{
+                display: flex;
+
+                input{
+                    margin-top: 1rem;
+                    width: 15rem;
+                    height: 2rem;
+                    border: none;
                     border-radius: 15px;
-                    @include neumorphismeHoverButtonMedium;
+                    background: white;
+                    box-shadow: $shadowgreenMediumOutside;
+    
+                }
+    
+                .password_button_form{
+                    padding: 1rem;
+                    font-size: 19px;
+                    margin-left: 3rem;
+                    border-radius: 15px;
+                    @include neumorphismeButtonMedium;
+    
+                    &:hover{
+                        border-radius: 15px;
+                        @include neumorphismeHoverButtonMedium;
+                    }
+
+                    @media screen and (max-width: 540px){
+                        margin-top: 2rem;
+                        width: auto;
+                        margin-left: 0;
+                    }
+                }
+
+                @media screen and (max-width: 540px){
+                    flex-direction: column;
                 }
             }
+    
     
             .button_form_submit{
                 font-size: 19px;
@@ -413,6 +463,7 @@ button, input{
             border-radius: 30px;
             width: 40rem;
             margin: auto;
+            margin-top: 5rem;
 
             :nth-child(1){
                 font-size: 1.4rem;
@@ -514,7 +565,6 @@ button, input{
         box-shadow: none;
         overflow-y: scroll;
         height: calc(100vh - 4rem - 5rem - 5rem);
-        // height: 100%;
 
         .message_post{
             background-color: white;
@@ -595,6 +645,7 @@ button, input{
                     }
 
                     img{
+                        border-radius: 15px;
                         max-width: 13rem;
                         margin: 1rem;
                     }
@@ -871,11 +922,32 @@ button, input{
         margin-top: 2rem;
         margin-bottom: 2rem;
         width: auto;
+        display: flex;
+
         img{
             max-width: 25rem;
             border-radius: 15px;
             box-shadow: $shadowgreenMediumOutside;
         }
+
+        .label-file {
+            font-size: 20px;
+            color: white;
+            @include neumorphismeButtonMedium;
+            padding: 1rem;
+            margin-left: 1rem;
+            height: 2rem;
+            margin-top: 5rem;
+            margin-left: 4rem;
+                
+            }
+            .label-file:hover {
+                @include neumorphismeHoverButtonMedium;
+            }
+            
+            .input-file {
+                display: none;
+            }
         
     }
 
@@ -898,6 +970,16 @@ button, input{
                 margin-left: 1rem;
             }
         }
+
+        input{
+            height: 2rem;
+            margin-left: 1rem;
+            border-radius: 15px;
+            border: none;
+            padding-left: 1rem;
+            font-size: 16px;
+            box-shadow: $shadowgreenMediumOutside;
+        }
     }
 
 }
@@ -909,6 +991,7 @@ button, input{
     justify-content: center;
             
     button{
+        color: white;
         margin: 2rem;
         width: 10rem;
         height: 4rem;
