--- a/frontend/groupomania/src/scss/style.scss
+++ b/frontend/groupomania/src/scss/style.scss
@@ -238,6 +238,7 @@ button, input{
                 }
     
                 .password_button_form{
+                    color: white;
                     padding: 1rem;
                     font-size: 19px;
                     margin-left: 3rem;
@@ -263,6 +264,7 @@ button, input{
     
     
             .button_form_submit{
+                color: white;
                 font-size: 19px;
                 margin: auto;
                 margin-top: 3rem;
@@ -293,9 +295,10 @@ button, input{
     position: absolute;
     display: flex;
     justify-content: center;
+    margin-bottom: 10rem;
 
     @media screen and (max-width: 900px) {
-        margin-bottom: 10rem;
+        // margin-bottom: 10rem;
         // height: 100vh;
     }
 
@@ -343,19 +346,44 @@ button, input{
                         width: auto;
                     }
                 }
-    
-                input{
-                    margin: 1rem;
-                    width: 15rem;
-                    border-radius: 15px;
-                    background: white;
-                    box-shadow: $shadowgreenMediumOutside;
-                    border: none;
-                    // height: 2rem;
 
-                    @media screen and (max-width: 780px) {
-                        height: 1.5rem;
-                        margin-bottom: 0.5rem;
+                .container_input_style{
+                    display: flex;
+                    flex-direction: column;
+
+                    input{
+                        margin-top: 1.5rem;
+                        width: 15rem;
+                        border-radius: 15px;
+                        background: white;
+                        box-shadow: $shadowgreenMediumOutside;
+                        border: none;
+                        height: 2rem;
+    
+                        @media screen and (max-width: 780px) {
+                            height: 1.5rem;
+                            // margin-bottom: 0.5rem;
+                            margin-left: 1rem;
+                        }
+                    }
+
+                    .txt_error_sign_up{
+                        // height: 1.5rem;
+                        max-width: 10rem;
+                        padding-left: 1rem;
+                        padding-right: 1rem;
+                        margin: 1rem;
+                        background-color: white;
+                        border-radius: 15px;
+                        color: red;
+                        font-weight: 700;
+                    }
+                    
+                    .password_input_form{
+
+                        @media screen and (max-width: 480px) {
+                            margin-top: 3rem;
+                        }
                     }
                 }
 
@@ -411,16 +439,18 @@ button, input{
                 }
         
                 .password_button_form{
+                    margin: 1rem;
+                    padding-top: 0.5rem;
+                    font-size: 28px;
                     color: white;
-                    margin: 0.5rem;
-                    font-size: 19px;
+                    // margin: 0.5rem;
+                    height: 3rem;
+                    width: 3rem;
                     @include neumorphismeButtonMedium;
 
                     @media screen and (max-width: 780px) {
-                        width: 7rem;
                         margin-left: 1rem;
-                        height: 2rem;
-                        // margin: auto;
+                        margin-top: -1rem;
                     }
         
                     &:hover{
@@ -488,10 +518,11 @@ button, input{
             .button_chat{
                 padding-left: 1rem;
                 padding-right: 1rem;
+                padding-top: 0.5rem;
                 height: 3rem;
                 border: none;
                 @include neumorphismeButtonMedium;
-                font-size: 22px;
+                font-size: 30px;
                 font-weight: bold;
                 color: white;
 
@@ -607,7 +638,6 @@ button, input{
                 display: flex;
 
                 .label-file {
-                    font-size: 20px;
                     border-radius: 15px;
                     @include neumorphismeButtonMedium;
                     cursor: pointer;
@@ -745,7 +775,7 @@ button, input{
                     }
 
                     button{
-                        font-size: 16px;
+                        font-size: 22px;
                         border-radius: 15px;
                         margin-top: 1rem;
                         margin-right: 1rem;
@@ -754,6 +784,7 @@ button, input{
                         border: none;
                         transition: 0.3s;
                         color: white;
+                        padding-top: 0.3rem;
                         padding-left: 1rem;
                         padding-right: 1rem;
 
@@ -790,6 +821,7 @@ button, input{
                         flex-direction: column;
                         justify-content: right;
                         .label-file {
+                            font-size: 22px;
                             justify-content: right;
                             width: 3rem;
                             font-size: 14px;
@@ -828,15 +860,15 @@ button, input{
                 text-align: right;
 
                 button{
-                    font-size: 14px;
+                    font-size: 20px;
                     margin-right: 2rem;
                     margin-bottom: 1rem;
-                    margin-top: 1rem;
                     background-color:$mediumGreenShadowLowIntensity;
                     color: white;
                     border-radius: 15px;
                     height: 2rem;
                     border: none;
+                    padding-top: 0.3rem;
                     padding-left: 1rem;
                     padding-right: 1rem;
                     transition: 0.3s;
@@ -869,23 +901,28 @@ button, input{
                             margin-left: 0.5rem;
                         }
 
+                        img{
+                            border-radius: 15px;
+                            margin-top: 1rem;
+                            max-width: 13rem;
+                            margin-left: 1rem;
+
+                        }
                         .container_style_img_comment{
                             display: flex;
+                            flex-direction: column;
+                            justify-content: center;
 
                             img{
-                                border-radius: 15px;
-                                margin-top: 1rem;
-                                max-width: 13rem;
-                                margin-left: 1rem;
-    
+                                max-width: 20rem;
+                                padding-top: 2rem;
+                                margin: auto;
                             }
     
                             .label-file {
-                                width: 7.2rem;
-                                font-size: 14px;
-                                margin: 1rem;
-                                margin-top: 5rem;
-                                margin-left: 4rem;
+                                font-size: 24px;
+                                margin: auto;
+                                margin-top: 1rem;
                                 background-color:$mediumGreenShadowLowIntensity;
                                 color: white;
                                 border-radius: 15px;
@@ -895,7 +932,7 @@ button, input{
                                 padding-left: 1rem;
                                 padding-right: 1rem;
                                 transition: 0.3s;
-                                padding-top: 0.5rem;
+                                padding-top: 0.3rem;
                                 cursor: pointer;
                                 
                             }
@@ -911,12 +948,12 @@ button, input{
                             }
                     
                             .img_file{
-                                max-width: 15rem;
+                                margin: auto;
+                                max-width: 25rem;
                                 max-height: 10rem;
                                 border-radius: 15px;
                                 margin-top: 1rem;
                                 display: flex;
-                                margin-left: 4rem;
                             }
                         }
 
@@ -981,6 +1018,7 @@ button, input{
                         justify-content: center;
 
                         .label-file {
+                            font-size: 24px;
                             margin: auto;
                             margin-bottom: 1rem;
                             width: 3rem;
@@ -989,7 +1027,7 @@ button, input{
                             color: rgb(255, 255, 255) ;
                             border-radius: 15px;
                             border: none;
-                            padding-top: 0.5rem;
+                            padding-top: 0.3rem;
                             padding-bottom: 0.5rem;
                             padding-left: 1rem;
                             padding-right: 1rem;
@@ -1180,10 +1218,14 @@ button, input{
     box-shadow: inset 1px 1px 20px 0px #00543f;
 
     p{
-        font-size: 4rem;
+        font-size: 60px;
         font-weight: bold;
         color: white;
         text-shadow: #00543f 5px 0 5px;
+
+        @media screen and (max-width:750px) {
+            font-size: 40px;
+        }
     }
 }
 
@@ -1203,12 +1245,20 @@ button, input{
     scroll-behavior: smooth;
 
     .container_style_jurisdiction{
+        padding-right: 1rem;
+        padding-left: 1rem;
         overflow-y: scroll;
         margin-left: 15%;
         margin-right: 15%;
         color: white;
         background-color: $lightMediumGreen;
         box-shadow: 0px 1px 29px -3px rgba(0,0,0,0.72);
+
+        @media screen and (max-width:750px){
+            margin-left: 5%;
+            margin-right: 5%;
+        }
+
         a{
             color: white;
             // text-decoration: none;
